# zhihu-scraper

./: .gitignore  AGENTS.md  CHANGELOG.md  CONSTITUTION.md  DEVLOG.md  LICENSE  MANUAL.md  README.md  README_EN.md  SYSTEM_HANDOVER.md  config.yaml  converter.py  cookies.json  install.sh  main.py  pyproject.toml  requirements.txt  scraper.py  test.py  walkthrough.md  zhihu
.github/workflows/: ci.yml
browser_data/: Local State  first_party_sets.db
browser_data/Default/: Cookies  DIPS  Favicons  History  Network Persistent State  Preferences  Reporting and NEL  Secure Preferences  Top Sites  TransportSecurity  Web Data
browser_data/Default/DawnGraphiteCache/: data_1  index
browser_data/Default/DawnWebGPUCache/: data_1  index
browser_data/Default/Extension Rules/: LOG
browser_data/Default/Extension Scripts/: LOG
browser_data/Default/Extension State/: LOG  LOG.old
browser_data/Default/GCM Store/: LOG  LOG.old
browser_data/Default/GPUCache/: data_0  data_1  data_2  index
browser_data/Default/Session Storage/: LOG  LOG.old
browser_data/Default/Sessions/: Session_13415378356402737  Session_13415379721534020  Tabs_13415378356618877  Tabs_13415379721859567
browser_data/Default/Site Characteristics Database/: LOG  LOG.old
browser_data/Default/WebStorage/: QuotaManager
browser_data/Default/shared_proto_db/: LOG  LOG.old
browser_data/GrShaderCache/: data_1  index
browser_data/GraphiteDawnCache/: data_1  index
browser_data/ShaderCache/: data_1  index
browser_data/segmentation_platform/: ukm_db
cli/: __init__.py  app.py  archive_execution.py  config_view.py  creator_metadata.py  healthcheck.py  interactive.py  interactive_legacy.py  launcher_flow.py  manual_content.py  optional_deps.py  save_contracts.py  save_pipeline.py  workflow_contracts.py  workflow_service.py
cli/tui/: __init__.py  app.py  dialogs.py  runner.py  state.py  theme.tcss  widgets.py
core/: __init__.py  api_client.py  browser_fallback.py  config.py  config_runtime.py  config_schema.py  converter.py  cookie_manager.py  db.py  errors.py  humanizer.py  i18n.py  logging_setup.py  media_downloader.py  monitor.py  project_paths.py  runtime_paths.py  scraper.py  scraper_contracts.py  scraper_payloads.py  state_store.py  structlog_compat.py  translator.py  utils.py
core/locales/: en.json  zh.json  zh_hant.json
core/prompts/: translate.txt
data/: .monitor_state.json  README.md  zhihu.db
data/[2018-10-02] MIT—线性代数笔记19 行列式公式和代数余子式 - 三少爷的键/: index.md
data/[2024-11-29] 博士起薪比硕士高了快一倍，为什么很多人都劝退博士？ - 智慧少女不会秃头/: index.md
data/[2025-05-20] 别闭门造车了，这是我写了3篇硕博论文（2篇二区+1篇三区）才总结出的真经验/: index.md
data/[2026-02-10] 为什么基础科学很久没有重大突破了？ - snowtree/: index.md
data/[2026-02-12] 为什么古人说_“事以密成”_/: Euricles.md  Zpuzzle.md  夜猫疯AI.md  研实.md  绫波丽.md  萌新瑟瑟发抖.md  蒜泥孙某某.md  赴火流萤official.md  超形离骸.md  鸡蛋松菇面.md
data/[2026-02-21] 2025 年你看过最精彩的影视回答是哪一篇？/: index.md
data/[2026-02-21] 你写过或者听过哪些「魔性」的故事？/: index.md
data/[2026-02-21] 如何评价 BERT 模型？/: index.md
data/[2026-02-21] 如果被困到同一天里，如何跳出时间循环？/: index.md
docs/: .gitkeep  ARCHITECTURE.md  IMPLEMENT_PLAN.md  PLATFORM_SUPPORT.md  REPOSITORY_BOUNDARY.md  STAGE1_SKILL_FOUNDATION.md  STAGE2_QUALITY_AUDIT.md  STAGE5_VALIDATION_MATRIX.md  STAGE6_ISSUE_REPLY_TEMPLATES.md  STAGE6_MERGE_PLAYBOOK.md  STAGE6_RELEASE_REVIEW.md  TUI_REBUILD_MERGE_CHECKLIST.md  VALIDATION_BASELINE.md  WINDOWS_RUNBOOK.md  config.md  dependency-map.md  workflows.md
docs/archive/: REPOSITORY_BOUNDARY.md
examples/: README.md
libs/: z_core.js
references/: README.md
references/skills/: mermaid-diagram.md  mermaid-tools.md  readme-generator.md
references/skillsmp/: README.md
references/skillsmp-curated/: README.md
scripts/: batch.sh  check.sh  ensure_env.sh  fetch.sh  fetch_batched.sh  fetch_question_batched.py  query.sh  setup_cookie.sh
templates/: cookies.json.example
tests/: test_browser_fallback.py  test_cli_compat.py  test_command_surface.py  test_config_runtime.py  test_config_schema.py  test_config_view.py  test_db_contract.py  test_docs_sync.py  test_install_contract.py  test_save_contracts.py  test_save_pipeline.py  test_scraper.py  test_scraper_contracts.py  test_scraper_payloads.py  test_translator.py  test_tui_rebuild.py  test_workflow_service.py
(+877 files in other folders)
