[project]
name = "zhihu-scraper"
version = "2.1.0"
description = "ðŸ•·ï¸ é«˜è´¨é‡çŸ¥ä¹Žå†…å®¹çˆ¬å–å·¥å…·"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "yuchenzhu-research", email = "zyc20070222@gmail.com" }
]
keywords = ["zhihu", "scraper", "crawler"]

# æ ¸å¿ƒä¾èµ–
dependencies = [
    "playwright>=1.49.0",
    "markdownify>=0.14.1",
    "beautifulsoup4>=4.12.3",
    "httpx>=0.28.1",
    "PyExecJS>=1.5.1",
    "rich>=13.0.0",
    "questionary>=2.0.0",
    "pyyaml>=6.0",
    "structlog==24.4.0",
    "typer>=0.9.0",
]

# CLI å…¥å£
[project.scripts]
zhihu = "cli.app:main"

# æ¡ä»¶ä¾èµ–
[project.optional-dependencies]
cli = [
    "typer>=0.9.0",
]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.21",
    "mypy>=1.5",
    "ruff>=0.1",
    "typer>=0.9.0",
]
lint = [
    "mypy>=1.5",
    "ruff>=0.1",
]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 100
[tool.ruff.lint]
select = ["E", "F", "I", "UP", "N"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true