[project]
name = "zhihu-scraper"
version = "3.0.1"
description = "🕷️ 高质量知乎内容爬取工具"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.14"
authors = [
    { name = "yuchenzhu-research", email = "zyc20070222@gmail.com" }
]
keywords = ["zhihu", "scraper", "crawler"]

# 基础运行依赖（协议抓取 + CLI/TUI）；浏览器回退不在这一层
dependencies = [
    "curl_cffi>=0.14.0",
    "markdownify>=0.14.1",
    "beautifulsoup4>=4.12.3",
    "httpx>=0.28.1",
    "PyExecJS>=1.5.1",
    "rich>=13.0.0",
    "questionary>=2.0.0",
    "pyyaml>=6.0",
    "structlog==24.4.0",
    "typer>=0.9.0",
    "textual>=8.2.1",
]

# CLI 入口
[project.scripts]
zhihu = "cli.app:main"

# 条件依赖
[project.optional-dependencies]
# 完整本地运行环境（包含浏览器回退依赖）
full = [
    "playwright>=1.40.0",
]
# 仅 CLI 命令（预留给未来进一步细分的轻量安装模型）
cli = [
]
# LLM-powered translation
translate = [
    "openai>=1.0",
]
# 开发测试
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.21",
    "mypy>=1.5",
    "ruff>=0.1",
    "typer>=0.9.0",
]
lint = [
    "mypy>=1.5",
    "ruff>=0.1",
]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py314"
line-length = 100
[tool.ruff.lint]
select = ["E", "F", "I", "UP", "N"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.14"
warn_return_any = true
warn_unused_configs = true

[tool.setuptools.packages.find]
include = ["cli*", "core*"]
